[tool.poetry]
name = "chkmate"
version = "0.1.0"
description = ""
authors = ["HSN <hasanlock@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev] # This part can be left out

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
black = "^24.10.0"
flake8 = "^7.1.1"
icecream = "^2.1.3"
autopep8 = "^2.3.1"

[tool.poetry.group.test] # This part can be left out

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
